--- a/Rope.Net.iOS.Sample/Ui/ViewControllers/SampleViewController.xib
+++ b/Rope.Net.iOS.Sample/Ui/ViewControllers/SampleViewController.xib
@@ -31,8 +31,8 @@
                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="10" id="13" translatesAutoresizingMaskIntoConstraints="NO">
                     <rect key="frame" x="313" y="124.5" width="274" height="31"/>
                 </slider>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Value" lineBreakMode="tailTruncation" minimumFontSize="10" id="20" translatesAutoresizingMaskIntoConstraints="NO" textAlignment="center">
-                    <rect key="frame" x="0.0" y="84" width="300" height="20.5"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Value" lineBreakMode="tailTruncation" minimumFontSize="10" id="20" translatesAutoresizingMaskIntoConstraints="NO" textAlignment="center" misplaced="YES">
+                    <rect key="frame" x="0.0" y="87" width="300" height="20"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
